# royal-london-gimpish

./: .gitignore  AGENTS.md  makefile
api/: pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2921e44f14bc_create_core_tables.py  4c0a9fbf8a7d_add_report_failed_status.py  6b9e2b5e1b6a_update_enum_values_and_indexes.py
api/app/: main.py
api/app/api/: deps.py  errors.py
api/app/api/v1/: assets.py  jobs.py  reports.py
api/app/core/: config.py  enums.py  exceptions.py  logging.py
api/app/db/: base.py  session.py
api/app/jobs/: extract_moments.py  generate_video.py  gimpify_image.py  utils.py
api/app/models/: __init__.py  asset.py  job.py  report.py
api/app/schemas/: __init__.py  asset.py  extract_moments.py  job.py  report.py
api/app/services/: __init__.py  asset_service.py  gcs.py  genai_extractor.py  job_service.py  queue.py  replicate_service.py  report_service.py
api/app/utils/: storage_paths.py
api/app/workers/: runner.py
api/tests/: conftest.py  test_extract_moments_job.py  test_job_state_transitions.py  test_replicate_service.py  test_reports.py
apps/web/: .env.example  .env.production.example  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/admin/: layout.tsx  page.tsx
apps/web/app/reports/: page.tsx
apps/web/components/: asset-viewer.tsx  empty-state.tsx  gimp-image-upload.tsx  job-progress.tsx  report-card.tsx  report-form.tsx  report-list.tsx  section-header.tsx  status-badge.tsx
apps/web/components/admin/: status-filter.tsx
(+10 files in other folders)
